src/main/java/org/example/exception/ClassifiedException.java
package org.example.exception;

public class ClassifiedException {
    public static void main(String[] args) {

        System.out.println("INI DI EKSEKUSI ....");
//        int intZ = 1/0;
//        try{
//            //jalankan proses
//            int intX=1/0;
//            int intY=intX;
//            //error
//
//            System.out.println(intX/intY);
//
//            // close / kill proses open connectivity
//        }catch(NullPointerException e){
//            System.out.println("Ketangkap nih error "+e.getMessage());
//        }finally {
//            System.out.println("Masuk Ke Finally ... ");
//            //close connectivity nya disini......
//        }
//
//        System.out.println("Berhenti Disini ....");


        //SQL -> connectivity ke database
//        misal :
//        username : root
//        password : Admin@123
//        192.168.33.86:3309
        //IO -> File
//        RWX -> Read Write Execution
    }
}
